# plainlibs

./: .clang-format  .gitignore  LICENSE-CC0  LICENSE-MIT  LICENSE.md  README.adoc  README.md  meson.build  meson_options.txt
include/idiot/: argparse.h
include/plain/: argparse.h  intbuiltins.h  intmath.h  minmax.h
tests/: argparse.c  intbuiltins.c  intmath.c  meson.build  minmax.c
